--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Swarm"]
-	path = Swarm
-	url = git@github.com:chiragpat/Swarm.git
+[submodule "apps/Swarm"]
+	path = apps/Swarm
+	url = git://github.com/chiragpat/Swarm
