--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "chiragpat.com",
-  "version": "0.0.0",
+  "version": "0.0.0-4",
   "description": "Code running chiragpat.com",
   "main": "server.js",
+  "domains": [
+    "www.chiragpat.com",
+    "chiragpat.com",
+    "swarm.chiragpat.com"
+  ],
   "repository": "https://github.com/chiragpat/chiragpat.com",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,5 +20,9 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "express": "~3.4.0"
-  }
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "subdomain": "chiragp"
 }
